# delta

./: '  .gitignore  .gitmodules  CMakeLists.txt  Game.cpp  Game.h  LICENSE  Player.cpp  Player.h  TextureManager.cpp  TextureManager.h  main.cpp  movement.cpp
data/: delta.tiled-project  delta.tiled-session  test_map.json
data/maps/: hoenn-route-101.tmx  hoenn-route-102.tmx  hoenn-route-103.tmx  hoenn.world  littleroot-town.tmx  littleroot_town.tmx  littleroot_town_house_1.tmx  oldale-town.tmx  petalburg-city.tmx
data/maps/export/: hoenn-route-101.json  hoenn-route-102.json  hoenn-route-103.json  littleroot-town.json  littleroot_town.json  littleroot_town_house_1.json  oldale-town.json  petalburg-city.json
data/scripts/: test1.delta
data/tiles/: collision.tsx  indoor.tsx  outdoor.tsx  outdoor_16x16.tsx
data/tiles/export/: collision.json  indoor.json  outdoor.json  outdoor_16x16.json
delta/: Game.cpp  Game.h  Map.cpp  Map.h  MapManager.cpp  MapManager.h  Tileset.cpp  Tileset.h  TilesetManager.cpp  TilesetManager.h  WorldManager.cpp  WorldManager.h  WorldManagerTest.cpp
engine/: AnimatedTileComponent.h  Animation.h  Asset.h  AssetLoader.cpp  AssetLoader.h  AssetManager.cpp  AssetManager.h  BehaviourComponent.h  CameraComponent.h  CharacterController.cpp  CharacterController.h  ColliderComponent.h  Components.h  DetectorComponent.h  ECS.cpp  ECS.h  KeyboardControllerComponent.h  SpriteComponent.h  TeleportComponent.h  Texture.h  TextureManager.cpp  TextureManager.h  TileComponent.h  TileManager.cpp  TileManager.h  TransformComponent.h  Vector2.cpp  Vector2.h  Vector2D.cpp  Vector2D.h  WindowManager.h  engine.h
src/: ActorManager.h  ActorSystem.h  Animation.h  Asset.h  AssetLoader.cpp  AssetLoader.h  AssetManager.h  BehaviourComponent.h  CharacterController.cpp  CharacterController.h  ColliderComponent.h  DetectorComponent.h  ECS.cpp  ECS.h  Engine.cpp  Engine.h  Game.cpp  Game.h  Main.cpp  MapManager.cpp  MapManager.h  Npc.cpp  Npc.h  Player.cpp  Player.h  Polygon.cpp  Polygon.h  RenderManager.cpp  RenderManager.h  RoutineComponent.h  Script.cpp  Script.h  SpriteComponent.h  System.cpp  System.h  TeleportComponent.h  TerrainManager.cpp  TerrainManager.h  TileComponent.h  TileManager.cpp  (+16 more)
src/math/: Math.h  Plane2.h  Polygon.cpp  Polygon.h  Rect.cpp  Rect.h  Vec2.cpp  Vec2.h
